[package]
name = "trapezia"
version = "0.1.0"
authors = ["Bernardo A. Rodrigues <bernardoaraujor@gmail.com>"]
repository = "https://github.com/bernardoaraujor/trapezia-rs"
license = "MIT"
description = "Rust drivers for Coral Environmental Sensor Board (HDC2010, OPT3002 and BMP280) using the linux-embedded-hal trait."
readme = "README.md"
keywords = ["google", "coral", "sensor", "temperature", "humidity", "light", "pressure", "linux-embedded-hal"]
categories = ["embedded", "no-std", "hardware-support"]
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]

[dependencies]
linux-embedded-hal = "0.3"
shared-bus = "0.2.0"
hdc20xx = "0.1.0"
opt300x = "0.1.0"
bmp280 = "0.2.1"
nb = "0.1"
