[package]
name = "coral-env"
version = "0.1.0"
authors = ["Bernardo A. Rodrigues <bernardoaraujor@gmail.com>"]
repository = "https://github.com/bernardoaraujor/trapezia-rs"
license = "MIT"
description = "Rust drivers for Coral Environmental Sensor Board (HDC2010, OPT3002 and BMP280)."
readme = "README.md"
keywords = ["google", "coral", "sensor", "temperature", "humidity", "light", "pressure", "linux-embedded-hal"]
categories = ["embedded", "no-std", "hardware-support"]
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]

[dependencies]
linux-embedded-hal = "0.3"
hdc20xx = "0.1.0"
opt300x = "0.1.0"
bmp280 = { git = "https://github.com/natemara/bmp280" }
i2cdev = "0.3.0"
nb = "0.1"
